# drf_lessons

./: pyproject.toml
config/: settings.py  urls.py
users/migrations/: 0001_initial.py
vehicle/: models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_milage.py  0004_alter_milage_car_alter_milage_moto.py  0005_car_owner.py  0006_moto_owner.py  0007_car_amount.py
